--- a/CHANGES_up_to_1.2.6
+++ b/CHANGES_up_to_1.2.6
@@ -44,11 +44,11 @@ Thu May 17 19:30:41 CEST 2007  ero@dkbza.org
   
   -Version bumped to 1.2.5
   -Added parsing error reporting "get_warnings()" and "show_warnings()"
-  -Fixed issues parsing version information that led to infite loops
+  -Fixed issues parsing version information that led to infinite loops
   
 
 Tue Mar 13 11:51:30 CET 2007  ero@dkbza.org
-  * Added length check to excape an infinite loop when parsing the version information
+  * Added length check to escape an infinite loop when parsing the version information
 
 Wed Mar  7 21:04:01 CET 2007  ero@dkbza.org
   * Increased version number
@@ -96,18 +96,18 @@ Wed Nov  1 18:17:04 CET 2006  ero@dkbza.org
   -Added more machine types
   -Added support for the PE32+ format
   -Fixed bugs handling unicode data when dumping the PE file information in text mode
-  -Improved handling of malformed direcories in the Optional Header. Large values of NumberOfRvaAndSizes should finally have no effect and the file should still be successfully parsed
+  -Improved handling of malformed directories in the Optional Header. Large values of NumberOfRvaAndSizes should finally have no effect and the file should still be successfully parsed
   -Improved handling of section names
   -Improved handling of the resources directory hierarchy
   
 
 Tue Oct 24 12:47:57 CEST 2006  ero@dkbza.org
-  * Added notes about the writting support
+  * Added notes about the writing support
 
 Tue Oct 24 12:33:22 CEST 2006  ero@dkbza.org
   * Merged OC patch and other bugfixes
   
-  -Merged all the changes made by the Offensive Computing people. Fixing miscellanous bugs when parsing files bordering the malformed.
+  -Merged all the changes made by the Offensive Computing people. Fixing miscellaneous bugs when parsing files bordering the malformed.
   -Fixed bug when appending unicode strings from the resources to the plain ascii ones generated when dumping the file information. As everything was converted to unicode in order to be appended, sometimes non-printable characters got converted to unicode that could not be mapped back later to a printable char, hence 'print' was failing. Now all the unicode strings are str()'d before they are appended to the rest of the output.
   
 
